# snake-game

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main.c  main.cpp
.github/workflows/: build-and-release.yml  build.yml  release.yml
c_legacy/include/: snake.h  terminal.h
c_legacy/src/: terminal.c
cpp/: Makefile  main.cpp
cpp/include/: board.hpp  entity.hpp  food.hpp  game_controller.hpp  iboard.hpp  score_manager.hpp  snake.hpp
cpp/src/: board.cpp  food.cpp  game_controller.cpp  input_handler.cpp  score_manager.cpp  snake.cpp  terminal_renderer.cpp
cpp/tests/: test_integration.cpp  test_unit.cpp
include/: board.h  constants.hpp  entity.hpp  food.hpp  game.h  game_controller.hpp  game_engine.hpp  game_state.hpp  input_handler.hpp  irenderer.hpp  score_manager.hpp  snake.h  snake.hpp  snake_segment.hpp  terminal_renderer.hpp  wasd_input_handler.hpp
src/: board.c  entity.cpp  food.cpp  game.c  game_engine.cpp  game_state.cpp  main.cpp  score_manager.cpp  snake.c  snake.cpp  snake_segment.cpp  terminal_renderer.cpp  wasd_input_handler.cpp
tests/: test_unit.cpp
